Fixed #32934 -- Set admin sidebar height to be dynamic based on visible header

--- a/django/contrib/admin/static/admin/css/nav_sidebar.css
+++ b/django/contrib/admin/static/admin/css/nav_sidebar.css
@@ -40,6 +40,7 @@
     border-right: 1px solid var(--hairline-color);
     background-color: var(--body-bg);
     overflow: auto;
+    height: calc(100vh - 87px);
 }
 
 [dir="rtl"] #nav-sidebar {
